[package]
name = "blueprint3"
version = "0.1.0"
authors = ["Horup <sah@sah.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
rand = "0.8.3"
integer_scaling = "1.3.2"
bevy_rapier2d = "0.9.0" 

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3