[package]
name = "some-tank-game"
version = "0.9.0"
authors = ["Horup <sah@sah.dk>"]
edition = "2018"
resolver = "2"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
crate-type = ["cdylib", "rlib"]


[dependencies]
extensions = {path = "crates/extensions" }
wasm-bindgen = "0.2"
rand = "0.8.3"
integer_scaling = "1.3.2"
bevy_rapier2d = {version = "0.9.0", features = ["serde-serialize"]} 
anyhow = "1.0"
serde = "1.0.126"
serde_json = "1.0"
ron = "0.6.4"


[build-dependencies]
chrono = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = {version = "0.5"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = {version = "0.5", default-features = false, features = ["bevy_winit", "render"]}
bevy_webgl2 = "0.5.2"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3