[package]
name = "extensions"
version = "0.1.0"
authors = ["Horup <sah@sah.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib", "rlib"]

[dependencies]
serde = "1.0.126"
serde_json = "1.0"
bevy = {version = "0.5"}
anyhow = "1.0"
tiled = "0.9.3"
bevy_rapier2d = {version = "0.9.0", features = ["serde-serialize"]} 
bevy_kira_audio = {version = "0.5.0", features = ["ogg"]}